dynamodel_tests/tests/ui/fails/struct_tuple.rs
use dynamodel::Dynamodel;

#[derive(Dynamodel)]
struct Tuple(String, String);

fn main() {}
